Fix entry exception highlight in dark mode

--- a/src/app/issues/issue-detail/event-detail/entry-exception/entry-exception.component.scss
+++ b/src/app/issues/issue-detail/event-detail/entry-exception/entry-exception.component.scss
@@ -77,8 +77,4 @@
   .disabled-panel {
     color: var(--mat-expansion-container-text-color);
   }
-
-  .highlighted {
-    background: mat.get-color-from-palette(mat.$gray-palette, 100);
-  }
 }
